--- a/projects.html
+++ b/projects.html
@@ -50,9 +50,9 @@
                     <img src="assets/images/Trail-Magic-Preview.png" style="height: 450px; width: 800px;" alt="Trail Magic">
                 </div>
                 <h2>Trail Magic.</h2>
-                <h3>Hiking Companion / Trail, Map, Weather API Data</h3>
-                <h3>Designed with hikers in mind. This webpage collects and condenses relevant data</h3>
-                <h3>for enthusiasts and impromptu hikers to quickly and efficiently plan their adventure.</h3>
+                <h3>Hiking Companion / Trail, Map, Weather API Data
+                Designed with hikers in mind. This webpage collects and condenses relevant data
+                for enthusiasts and impromptu hikers to quickly and efficiently plan their adventure.</h3>
                 <a class="btn btn-outline-primary project1-deployed" role="button" href="https://jppeters16.github.io/Trail_Magic/">
                     <i class="fas fa-search"></i> Preview</a>
                 <a class="btn btn-outline-primary project1-github" role="button" href="https://github.com/jppeters16/Trail_Magic">
@@ -61,11 +61,13 @@
         </section>
         <section id="project2">
           <div class="container">
-            <div class="p2-preview"></div>
-            <h2>Project2 Name</h2>
-            <h3>description</h3>
-            <a class="btn btn-outline-primary project2-deployed" role="button"><i class="fas fa-search"></i> Preview</a>
-            <a class="btn btn-outline-primary project2-github" role="button"><i class="fab fa-github"></i> Github</a>
+            <div class="p2-preview">
+                <img src="assets/images/Liri-bot-preview.png" style="height: 450px; width: 800px;" alt="LIRI Bot">
+            </div>
+            <h2>LIRI Bot</h2>
+            <h3>LIRI is a command line node app that takes in parameters and gives you back data using Nodejs, npm packages - request, spotify, bands-in-town and OMDB.</h3>
+            <a class="btn btn-outline-primary project2Deployed" role="button" href="https://jppeters16.github.io/LIRI/"><i class="fas fa-search"></i> Preview</a>
+            <a class="btn btn-outline-primary project2Github" role="button" href="https://github.com/jppeters16/LIRI"><i class="fab fa-github"></i> Github</a>
           </div>
         </section>
         <section id="project3">
