--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Pacifico|Volkhov" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Ewert|Volkhov" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="assets/js/main.js"></script>
 </head>
@@ -20,7 +20,8 @@
             <div class="col-md-4">
             <li class="nav-home">
               <a class="avatar" href="index.html">
-                <img src="assets/images/avatar.png" alt="avatar" style="height: 85px; width: 85px;">
+                <!-- <img src="assets/images/avatar.png" alt="avatar" style="height: 85px; width: 85px;"> -->
+              JP
               </a>
             </li>
           </div>
@@ -43,6 +44,7 @@
               <h1>John Peters.</h1>
               <h3 class="intro-description">a web developer</h3>
             </div>
+            <div class="arrow arrow-down"><i class="fas fa-arrow-down"></i></div>
           </section>
         </section>
         <section id="hello">
@@ -73,7 +75,7 @@
                 <h3>I'm currently available for freelance work.</h3>
                 <p>If you have a project in mind, simply want to ask me a question,</p>
                 <p>or would like to buy me a coffee, then get in touch.</p>
-                <button type="button" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</button>
+                <a href="mailto:peters.johnathan@gmail.com" target="_top" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</a>
               </div>
         </section>
         <section id=footer>
@@ -97,7 +99,7 @@
                       <i class="fab fa-github"></i>
                   </a>
               </li>
-              <li class="social-li">
+              <!-- <li class="social-li">
                   <a class="social-a" href="https://medium.com/@peters.johnathan" alt="Medium">
                       <span class=social-span></span>
                       <span class=social-span></span>
@@ -105,7 +107,7 @@
                       <span class=social-span></span>
                       <i class="fab fa-medium-m"></i>
                   </a>
-              </li>
+              </li> -->
               <!-- <li class="social-li">
                   <a class="social-a" href="#">
                       <span class=social-span></span>
