--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Carter+One|Pacifico|Volkhov" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Carter+One|Pacifico|Ewert|Volkhov" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <script src="assets/js/main.js"></script>
 </head>
 <body>
+  <div class="container-section-1"></div>
       <section id="nav-projects">
         <section id="home-top">
         <ul class="nav">
@@ -20,7 +21,8 @@
             <div class=col-md-4>
             <li class="nav-home">
               <a class="avatar" href="index.html">
-                <img src="assets/images/avatar.png" alt="avatar" style="height: 85px; width: 85px;">
+                <!-- <img src="assets/images/avatar.png" alt="avatar" style="height: 85px; width: 85px;"> -->
+              JP
               </a>
             </li>
           </div>
@@ -42,11 +44,41 @@
           <div class="container">
               <h1 class="projects-title">Past Projects.</h1>
             </div>
+            <div class="project-arrow arrow-down"><i class="fas fa-arrow-down"></i></div>
           </section>
         </section>
         <section id="project1">
             <div class="container">
-                <div class="p1-preview">
+                <div class="project-preview">
+                    <img src="assets/images/studybuddy.png" style="height: 450px; width: 800px;" alt="Study Buddy">
+                </div>
+              <h2>Study Buddy</h2>
+              <h3>Quick and easy to use mobile study tool built by students for students.<br>
+                <ul>
+                  <li class="bulletpoints">Prepare for an exam</li>
+                  <li class="bulletpoints">Share card sets with friends</li>
+                  <li class="bulletpoints">Discover your studying strengths and weaknesses</li>
+                  </ul>
+                  
+                  </h3>
+              <a class="btn btn-outline-primary project3-deployed" role="button" href="https://studybuddyunc.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
+              <a class="btn btn-outline-primary project3-github" role="button" href="https://github.com/betonit007/finalStudyBuddy"><i class="fab fa-github"></i> Github</a>
+            </div>
+          </section>
+          <section id="project2">
+              <div class="container">
+                  <div class="project-preview">
+                      <img src="assets/images/fuel4thought.png" style="height: 450px; width: 800px;" alt="Fuel 4 Thought">
+                  </div>
+                <h2>Fuel 4 Thought</h2>
+                <h3>description</h3>
+                <a class="btn btn-outline-primary project4-deployed" role="button" href="https://hidden-wave-55713.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
+                <a class="btn btn-outline-primary project4-github" role="button" href="https://github.com/jppeters16/FuelMagic"><i class="fab fa-github"></i> Github</a>
+              </div>
+            </section>
+        <section id="project3">
+            <div class="container">
+                <div class="project-preview">
                     <img src="assets/images/Trail-Magic-Preview.png" style="height: 450px; width: 800px;" alt="Trail Magic">
                 </div>
                 <h2>Trail Magic.</h2>
@@ -59,9 +91,9 @@
                     <i class="fab fa-github"></i> Github</a>
               </div>
         </section>
-        <section id="project2">
+        <section id="project4">
           <div class="container">
-            <div class="p2-preview">
+            <div class="project-preview">
                 <img src="assets/images/Liri-bot-preview.png" style="height: 450px; width: 800px;" alt="LIRI Bot">
             </div>
             <h2>LIRI Bot</h2>
@@ -70,29 +102,14 @@
             <a class="btn btn-outline-primary project2Github" role="button" href="https://github.com/jppeters16/LIRI"><i class="fab fa-github"></i> Github</a>
           </div>
         </section>
-        <section id="project3">
-                <div class="container">
-                  <h2>Project3 Name</h2>
-                  <h3>description</h3>
-                  <a class="btn btn-outline-primary project3-deployed" role="button"><i class="fas fa-search"></i> Preview</a>
-                  <a class="btn btn-outline-primary project3-github" role="button"><i class="fab fa-github"></i> Github</a>
-                </div>
-              </section>
-              <section id="project4">
-                    <div class="container">
-                      <h2>Project4 Name</h2>
-                      <h3>description</h3>
-                      <a class="btn btn-outline-primary project4-deployed" role="button"><i class="fas fa-search"></i> Preview</a>
-                      <a class="btn btn-outline-primary project4-github" role="button"><i class="fab fa-github"></i> Github</a>
-                    </div>
-                  </section>
+    
         <section id="i-can-help">
             <div class="container">
                 <h2>I can help.</h2>
                 <h3>I'm currently available for freelance work.</h3>
                 <p>If you have a project in mind, simply want to ask me a question,</p>
                 <p>or would like to buy me a coffee, then get in touch.</p>
-                <button type="button" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</button>
+                <a href="mailto:peters.johnathan@gmail.com" target="_top" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</a>
               </div>
         </section>
         <section id=footer>
@@ -116,15 +133,15 @@
                       <i class="fab fa-github"></i>
                   </a>
               </li>
-              <li class="social-li">
-                  <a class="social-a" href="https://medium.com/@peters.johnathan" alt="Medium">
+              <!-- <li class="social-li">
+                  <a class="social-a" href="#" alt="Medium">
                       <span class=social-span></span>
                       <span class=social-span></span>
                       <span class=social-span></span>
                       <span class=social-span></span>
                       <i class="fab fa-medium-m"></i>
                   </a>
-              </li>
+              </li> -->
               <!-- <li class="social-li">
                   <a class="social-a" href="#">
                       <span class=social-span></span>
