--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>John Peters - Web Developer Portfolio</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/icons8-moderator-48.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/icons8-statue-of-liberty-48.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
         <section id="home-top">
         <ul class="nav">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-sm-4">
             <li class="nav-home">
               <a class="avatar" href="index.html">
                 <!-- <img src="assets/images/avatar.png" alt="avatar" style="height: 85px; width: 85px;"> -->
@@ -25,10 +25,10 @@
               </a>
             </li>
           </div>
-          <div class="col-md-8 navItems">
-              <li class="nav-item">
+          <div class="col-sm-8 navItems">
+              <!-- <li class="nav-item">
                   <a class="nav-link" href="notes.html"><strong>Notes</strong></a>
-                </li>
+                </li> -->
             <li class="nav-item">
               <a class="nav-link" href="projects.html"><strong>Projects</strong></a>
             </li>
@@ -44,7 +44,7 @@
               <h1>John Peters.</h1>
               <h3 class="intro-description">a web developer</h3>
             </div>
-            <div class="arrow arrow-down"><i class="fas fa-arrow-down"></i></div>
+            <a href="#hello"class="arrow arrow-down"><i class="fas fa-arrow-down"></i></a>
           </section>
         </section>
         <section id="hello">
@@ -54,6 +54,8 @@
                 <h3>I have a passion for programming and enjoy working on</h3>
                 <h3>unique projects for both computers and mobile devices.</h3>
               </div>
+              <a href="#nav-intro"class="arrow arrow-up2"><i class="fas fa-arrow-up"></i></a>
+              <a href="#what-i-do"class="arrow arrow-down2"><i class="fas fa-arrow-down"></i></a>
         </section>
         <section id="what-i-do">
           <div class="container-do">
