--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>John Peters - Web Developer Portfolio</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/icons8-moderator-48.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/icons8-statue-of-liberty-48.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
@@ -27,9 +27,9 @@
             </li>
           </div>
           <div class="col-md-8">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                   <a class="nav-link" style="color: #ACDBC9;" href="notes.html"><strong>Notes</strong></a>
-                </li>
+                </li> -->
             <li class="nav-item">
               <a class="nav-link" style="color: #ACDBC9;" href="projects.html"><strong>Projects</strong></a>
             </li>
@@ -61,8 +61,8 @@
                   </ul>
                   
                   </h3>
-              <a class="btn btn-outline-primary project3-deployed" role="button" href="https://studybuddyunc.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
-              <a class="btn btn-outline-primary project3-github" role="button" href="https://github.com/betonit007/finalStudyBuddy"><i class="fab fa-github"></i> Github</a>
+              <a class="btn btn-outline-primary project1-deployed" role="button" href="https://studybuddyunc.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
+              <a class="btn btn-outline-primary project1-github" role="button" href="https://github.com/betonit007/finalStudyBuddy"><i class="fab fa-github"></i> Github</a>
             </div>
           </section>
           <section id="project2">
@@ -71,9 +71,9 @@
                       <img src="assets/images/fuel4thought.png" style="height: 450px; width: 800px;" alt="Fuel 4 Thought">
                   </div>
                 <h2>Fuel 4 Thought</h2>
-                <h3>description</h3>
-                <a class="btn btn-outline-primary project4-deployed" role="button" href="https://hidden-wave-55713.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
-                <a class="btn btn-outline-primary project4-github" role="button" href="https://github.com/jppeters16/FuelMagic"><i class="fab fa-github"></i> Github</a>
+                <h3>Implimented Google's Vision API to convert gas receipt images into parsable data that could be used to display price history and shopping trends</h3>
+                <a class="btn btn-outline-primary project2-deployed" role="button" href="https://hidden-wave-55713.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
+                <a class="btn btn-outline-primary project2-github" role="button" href="https://github.com/jppeters16/FuelMagic"><i class="fab fa-github"></i> Github</a>
               </div>
             </section>
         <section id="project3">
@@ -98,8 +98,8 @@
             </div>
             <h2>LIRI Bot</h2>
             <h3>LIRI is a command line node app that takes in parameters and gives you back data using Nodejs, npm packages - request, spotify, bands-in-town and OMDB.</h3>
-            <a class="btn btn-outline-primary project2Deployed" role="button" href="https://jppeters16.github.io/LIRI/"><i class="fas fa-search"></i> Preview</a>
-            <a class="btn btn-outline-primary project2Github" role="button" href="https://github.com/jppeters16/LIRI"><i class="fab fa-github"></i> Github</a>
+            <a class="btn btn-outline-primary project2-deployed" role="button" href="https://jppeters16.github.io/LIRI/"><i class="fas fa-search"></i> Preview</a>
+            <a class="btn btn-outline-primary project2-github" role="button" href="https://github.com/jppeters16/LIRI"><i class="fab fa-github"></i> Github</a>
           </div>
         </section>
     
