edited projects page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h3>I have a passion for programming and enjoy working on</h3>
                 <h3>unique projects for both computers and mobile devices.</h3>
               </div>
-              <a href="#nav-intro"class="arrow arrow-up2"><i class="fas fa-arrow-up"></i></a>
+              <!-- <a href="#nav-intro"class="arrow arrow-up2"><i class="fas fa-arrow-up"></i></a> -->
               <a href="#what-i-do"class="arrow arrow-down2"><i class="fas fa-arrow-down"></i></a>
         </section>
         <section id="what-i-do">
@@ -70,6 +70,8 @@
             <p>compatibility and the latest</p>
             <p>technologies available.</p>
           </div>
+          <!-- <a href="#nav-intro"class="arrow arrow-up3"><i class="fas fa-arrow-up"></i></a> -->
+          <a href="#i-can-help"class="arrow arrow-down3"><i class="fas fa-arrow-down"></i></a>
         </section>
         <section id="i-can-help">
             <div class="container">
@@ -79,6 +81,7 @@
                 <p>or would like to buy me a coffee, then get in touch.</p>
                 <a href="mailto:peters.johnathan@gmail.com" target="_top" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</a>
               </div>
+              <a href="#nav-intro"class="arrow arrow-up4">To the top <i class="fas fa-arrow-up"></i></a>
         </section>
         <section id=footer>
           
