--- a/projects.html
+++ b/projects.html
@@ -41,14 +41,14 @@
         </div>
       </section>
       <section id="projects-title">
-          <div class="container">
+          <div class="container-projects">
               <h1 class="projects-title">Past Projects.</h1>
             </div>
-            <div class="project-arrow arrow-down"><i class="fas fa-arrow-down"></i></div>
+            <a href="#project1"class="arrow arrow-down-project"><i class="fas fa-arrow-down"></i></a>
           </section>
         </section>
         <section id="project1">
-            <div class="container">
+            <div class="container-projects">
                 <div class="project-preview">
                     <img src="assets/images/studybuddy.png" style="height: 450px; width: 800px;" alt="Study Buddy">
                 </div>
@@ -66,25 +66,27 @@
             </div>
           </section>
           <section id="project2">
-              <div class="container">
+              <div class="container-projects">
                   <div class="project-preview">
                       <img src="assets/images/fuel4thought.png" style="height: 450px; width: 800px;" alt="Fuel 4 Thought">
                   </div>
                 <h2>Fuel 4 Thought</h2>
-                <h3>Implimented Google's Vision API to convert gas receipt images into parsable data that could be used to display price history and shopping trends</h3>
+                <h3>Implimented Google's Vision API to convert gas receipt images into parsable</h3>
+                <h3>data that could be used to display price history and shopping trends</h3>
                 <a class="btn btn-outline-primary project2-deployed" role="button" href="https://hidden-wave-55713.herokuapp.com/"><i class="fas fa-search"></i> Preview</a>
                 <a class="btn btn-outline-primary project2-github" role="button" href="https://github.com/jppeters16/FuelMagic"><i class="fab fa-github"></i> Github</a>
               </div>
             </section>
         <section id="project3">
-            <div class="container">
+            <div class="container-projects">
                 <div class="project-preview">
                     <img src="assets/images/Trail-Magic-Preview.png" style="height: 450px; width: 800px;" alt="Trail Magic">
                 </div>
                 <h2>Trail Magic.</h2>
-                <h3>Hiking Companion / Trail, Map, Weather API Data
-                Designed with hikers in mind. This webpage collects and condenses relevant data
-                for enthusiasts and impromptu hikers to quickly and efficiently plan their adventure.</h3>
+                <h3>Hiking Companion / Trail, Map, Weather API Data Designed with hikers in mind.</h3>
+                <h3>This webpage collects and condenses relevant data
+                for enthusiasts and</h3>
+                <h3>impromptu hikers to quickly and efficiently plan their adventure.</h3>
                 <a class="btn btn-outline-primary project1-deployed" role="button" href="https://jppeters16.github.io/Trail_Magic/">
                     <i class="fas fa-search"></i> Preview</a>
                 <a class="btn btn-outline-primary project1-github" role="button" href="https://github.com/jppeters16/Trail_Magic">
@@ -92,12 +94,13 @@
               </div>
         </section>
         <section id="project4">
-          <div class="container">
+          <div class="container-projects">
             <div class="project-preview">
                 <img src="assets/images/Liri-bot-preview.png" style="height: 450px; width: 800px;" alt="LIRI Bot">
             </div>
             <h2>LIRI Bot</h2>
-            <h3>LIRI is a command line node app that takes in parameters and gives you back data using Nodejs, npm packages - request, spotify, bands-in-town and OMDB.</h3>
+            <h3>LIRI is a command line node app that takes in parameters and returns</h3>
+            <h3> data using Nodejs, npm packages - request, spotify, bands-in-town and OMDB.</h3>
             <a class="btn btn-outline-primary project2-deployed" role="button" href="https://jppeters16.github.io/LIRI/"><i class="fas fa-search"></i> Preview</a>
             <a class="btn btn-outline-primary project2-github" role="button" href="https://github.com/jppeters16/LIRI"><i class="fab fa-github"></i> Github</a>
           </div>
@@ -111,6 +114,7 @@
                 <p>or would like to buy me a coffee, then get in touch.</p>
                 <a href="mailto:peters.johnathan@gmail.com" target="_top" class="btn btn-outline-primary messageMe"><i class="far fa-envelope"></i> Message Me</a>
               </div>
+              <a href="#nav-projects"class="arrow arrow-top-project">To the top <i class="fas fa-arrow-up"></i></a>
         </section>
         <section id=footer>
           
