--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="projects.html"><strong>Projects</strong></a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="index.html"><strong>About</strong></a>
-              </li>
+              </li> -->
           </div>
           </ul>
         </div>
